cmake_minimum_required(VERSION 3.9)
project(CompSciSpring2018)

set(CMAKE_CXX_STANDARD 17)
add_executable(Sandbox src/Sandbox.cpp)
add_executable(InternetSeriveProvider src/HW01-ISP/InternetSeriveProvider.cpp)
add_executable(HW01-Clock src/HW02-Clock/HW01-Clock.cpp)
add_executable(MonthlyPayments src/Lab01-Strings/MonthlyPayments.cpp)
add_executable(StockTransactionProgram src/Lab01-Strings/StockTransactionProgram.cpp)
add_executable(WordGame src/Lab01-Strings/WordGame.cpp)
add_executable(RomanNumeral src/OpenLab02-Roman/RomanNumeral.cpp)
add_executable(StateIncomeTax src/Lab02-Decisions/StateIncomeTax.cpp)
add_executable(CountdownTimer src/Lab03-Timer/CountdownTimer.cpp)
add_executable(Calculator src/OpenLab01-Calculator/Calculator.cpp)